# 02 - CarLoan/src/modules/cars/entities/Specification.ts
@@ -2,7 +2,7 @@ import {v4 as uuidV4} from "uuid"
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm"
 
 @Entity("specifications")
-class SpecificationModel {
+class Specification {
 
   @PrimaryColumn()
   id?: string
@@ -23,4 +23,4 @@ class SpecificationModel {
   }
 }
 
-export { SpecificationModel }
+export { Specification }
